--- a/index.html
+++ b/index.html
@@ -444,7 +444,91 @@
       </div>
     </footer>
     <div class="backdrop is-open">
-      <div class="modal"></div>
+      <div class="modal">
+        <button class="button-close" type="button" data-modal-close="">
+          <svg class="button-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="contact-form">
+          <div class="form-field">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="user-name"
+                id="user-name"
+                type="text"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-field">
+            <label class="form-label" for="user-name">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="user-tel"
+                id="user-tel"
+                type="tel"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="user-post">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="user-post"
+                id="user-post"
+                type="email"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field form-field-comment">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-field-checkbox">
+            <input
+              class="visually-hidden check-input"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+            />
+            <label class="label-checkbox" for="user-privacy">
+              <span class="span-checkbox">
+                <svg class="span-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;<a
+                href=""
+                target="_blank"
+                class="privacy-policy-link"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+          <button type="submit" class="submit-btn">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
