--- a/index.html
+++ b/index.html
@@ -441,6 +441,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-container">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form-hero">
+            <label class="footer-sub-form" for="sub-email">
+              <input
+                type="email"
+                name="sub-email"
+                placeholder="E-mail"
+                class="footer-sub-input"
+              />
+            </label>
+            <button type="submit" class="footer-sub-button">
+              Subscribe
+              <svg class="footer-sub-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-open">
@@ -466,7 +485,6 @@
               </svg>
             </div>
           </div>
-
           <div class="form-field">
             <label class="form-label" for="user-name">Phone</label>
             <div class="input-wrapper">
