--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
               <input
                 type="email"
                 name="sub-email"
+                id="sub-email"
                 placeholder="E-mail"
                 class="footer-sub-input"
               />
