--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             </div>
           </div>
           <div class="form-field">
-            <label class="form-label" for="user-name">Phone</label>
+            <label class="form-label" for="user-tel">Phone</label>
             <div class="input-wrapper">
               <input
                 class="form-input"
