--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="title-button">Order Service</button>
+          <button type="button" class="title-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="info-section">
@@ -463,9 +465,9 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop" data-modal>
       <div class="modal">
-        <button class="button-close" type="button" data-modal-close="">
+        <button class="button-close" type="button" data-modal-close>
           <svg class="button-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -549,5 +551,6 @@
         </form>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
